# Gold-Silver-Ratio

./: .gitignore  CLAUDE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_v1.1.0_COMPLETE.md  DEPLOY_MANUAL.md  ENHANCED_FEATURES.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  deploy-to-test.sh  deploy.py  docker-compose.yml  quick-deploy.sh
.claude/: settings.local.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  base.py  providers.py  tools.py
backend/app/api/: __init__.py  ai.py  alerts.py  assets.py  backtest.py  config.py  metrics.py  prices.py  regimes.py  signals.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/db/: __init__.py  models.py
backend/app/ingestion/: __init__.py  coordinator.py  scheduler.py
backend/app/ingestion/sources/: __init__.py  base.py  cftc.py  fred.py  metals.py  scraper.py  yahoo.py
backend/app/services/: __init__.py  alerts.py  backtest.py  metrics.py  signals.py
backend/tests/: test_metrics.py
docs/: DECISIONS.md  DEPLOYMENT.md
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page-old.tsx  page.tsx
frontend/src/app/ai/: page.tsx
frontend/src/components/: AdvancedCharts.tsx  Charts.tsx  Navigation.tsx
memory/gsr_strategy/: CLAUDE.md
memory/macro_regime/: CLAUDE.md
prompts/gsr_advisor/: system.md
(+5 files in other folders)
